tests/ui-common/subcommand_and_methods.stderr
error: methods in attributes are not allowed for subcommand
  --> $DIR/subcommand_and_methods.rs:17:24
   |
17 |     #[clap(subcommand, long)]
   |                        ^^^^
